[Bugfix] Video scrolling overflow

--- a/web-new/app/stylesheets/compass/sass/modules/_video.scss
+++ b/web-new/app/stylesheets/compass/sass/modules/_video.scss
@@ -9,7 +9,7 @@
     background-image: url(../images/texture-grey-bg-80X80.png);
 
     .w-media-gallery {
-        padding-top: 15px;
+        top: 36px;
     }
 }
 
